# GenBI_Python_POC

./: .gitignore  ChatDB_app.py  app.py  askDB.py  askPostgres.py  constants.py  postgres_local_connect.py  pyproject.toml  utils.py  wallet_credentials.py
spotify_data/: .~lock.artists_preprocessed.csv#  Untitled.ipynb  artists_preprocessed.csv  listeners_processed.csv  spotify_data_preprocess.py
spotify_data/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
